# george_ai

./: .gitignore  Cargo.toml  run.sh
backend/: Cargo.toml
backend/src/: chat.rs  main.rs  public.rs
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs
frontend/src/app/: about.rs  chat.rs  chatbak.rs  mod.rs
frontend/src/components/: nav.rs
frontend/tests/: web.rs
shared/: Cargo.toml
shared/src/: lib.rs
