[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[features]
use_openai = []

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
http = "0.2.9"
http-body = "0.4.5"
hyper = "0.14.27"
mime_guess = "2"
openai = "1.0.0-alpha.13"
serde = "1"
serde_json = "1"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
